remotely building with JDK 8